CHANGES-1.1.txt
---------------

CHANGES IN CUPS V1.1.21rc1

	- The cupsGetDests() function did not use the current
	  encryption setting (STR #653)
	- The scheduler did not properly parse name-based
	  BrowseRelay directives in the cupsd.conf file (STR
	  #711)
	- The IPP backend now supports the following options in
	  the device URI: encryption, waitjob, and waitprinter
	  (STR #699)
	- The parallel, serial, socket, and USB backends did not
	  return a non-zero exit status when a job failed to
	  print in the middle of sending it (STR #715)
	- Location directives in the cupsd.conf file were
	  case-sensitive for printer and class names, so
	  queue-specific access control was not reliable (STR
	  #700)
	- cupsDoFileRequest() did not handle HTTP continue
	  status messages in all cases, causing sporatic
	  problems with IPP printers from some vendors (STR
	  #716)
	- The rastertodymo driver now supports the Zebra ZPL
	  language (STR #713)
	- The test suite no longer generates a printcap file,
	  which caused problems when testing as the root user
	  (STR #693)
	- The scheduler now updates the accepting state of an
	  implicit class based upon the accepting state of its
	  member printers (STR #697)
	- The pstops filter didn't properly skip leading PJL
	  commands (STR #664)
	- The reinterpret_cast keyword was not highlighted when
	  printing C/C++ source files in prettyprint mode (STR
	  #694)
	- Fixed a segfault problem with some of the client
	  programs (STR #668)
	- When using RunAsUser, the scheduler did not correctly
	  set the ownership of the log files, preventing log
	  file rotation (STR #686)
	- The image filters did not correctly load 1-bit PNG
	  files (STR #687)
	- The pdftops filter did not show all annotation objects
	  in a PDF file (STR #674)
	- The pdftops filter did not print the contents of
	  textual form elements, making it impossible to print a
	  filled-in form (STR #663)
	- Integrated the MacOS X/Darwin USB backend into the